--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js" defer></script>
-  <title>Ensoul</title>
+  <title>Soularium</title>
 </head>
 
 <body>
